--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="parker"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
